// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with redux with defaults 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-template-columns: 140px auto;
  margin: 0 0 0 100px;
}

.c1 {
  grid-row-start: 1;
  grid-row-end: 3;
  margin: 20px 0;
  padding: 0;
}

.c2 {
  font-family: 'Lato';
  font-size: 3em;
  font-weight: bold;
  margin: 30px 0 0;
  padding: 0;
}

.c3 {
  color: grey;
  font-size: 1em;
  font-style: italic;
  margin: 0 0 25px;
  padding: 0;
}

<div
    class="c0"
  >
    <img
      class="c1"
      src="/logo.png"
    />
    <h1
      class="c2"
    >
      Strydo App
    </h1>
    <h2
      class="c3"
    >
      a lightweight kanban board showcase app
    </h2>
  </div>
  .c0 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 15px;
  margin: 0 75px;
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`renders correctly with redux with new data on mount 1`] = `
<DocumentFragment>
  .c0 {
  display: grid;
  grid-template-columns: 140px auto;
  margin: 0 0 0 100px;
}

.c1 {
  grid-row-start: 1;
  grid-row-end: 3;
  margin: 20px 0;
  padding: 0;
}

.c2 {
  font-family: 'Lato';
  font-size: 3em;
  font-weight: bold;
  margin: 30px 0 0;
  padding: 0;
}

.c3 {
  color: grey;
  font-size: 1em;
  font-style: italic;
  margin: 0 0 25px;
  padding: 0;
}

<div
    class="c0"
  >
    <img
      class="c1"
      src="/logo.png"
    />
    <h1
      class="c2"
    >
      Strydo App
    </h1>
    <h2
      class="c3"
    >
      a lightweight kanban board showcase app
    </h2>
  </div>
  .c0 {
  display: grid;
  grid-auto-flow: column;
  grid-gap: 15px;
  margin: 0 75px;
}

.c7 {
  cursor: pointer;
  margin-top: 15px;
  padding: 5px;
  text-align: center;
  width: 100%;
}

.c7:hover {
  color: grey;
}

.c4 {
  height: 5px;
  padding: 5px;
}

.c5 {
  background: none;
  border: none;
  height: 100%;
}

.c6 {
  border: 1px solid silver;
  margin: 0 5px;
  padding: 15px 20px;
}

.c6:hover {
  background-color: whitesmoke;
}

.c1 {
  border: 1px solid grey;
}

.c2 {
  background-color: #FFF;
  font-size: 15px;
  margin: 0;
  padding: 10px;
}

.c3 {
  border-top: 1px solid grey;
}

.c8 {
  cursor: pointer;
  margin-top: 15px;
  padding: 5px;
  text-align: center;
  width: 100%;
}

.c8:hover {
  color: grey;
}

<div
    class="c0"
  >
    <div>
      <div
        class="c1"
        id="abc-123"
      >
        <h3
          class="c2"
        >
          xyz
        </h3>
        <div
          class="c3"
        >
          <div
            class="c4"
            data-testid="move-card-handler"
          >
            <div
              class="c5"
            />
          </div>
          <div>
            <div
              class="c6"
              data-testid="card"
              id="123-abc"
            >
              content
              <button
                class="c7"
                data-testid="remove-card-handler"
              >
                - remove card
              </button>
            </div>
            <div
              class="c4"
              data-testid="move-card-handler"
            >
              <div
                class="c5"
              />
            </div>
          </div>
        </div>
      </div>
      <button
        class="c8"
        data-testid="add-card-handler"
      >
        + add card
      </button>
    </div>
  </div>
</DocumentFragment>
`;
